--- a/ITStudySearch/ITStudySearch/ITStudySearch/packages.config
+++ b/ITStudySearch/ITStudySearch/ITStudySearch/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="portable45-net45+win8+wp8" requireReinstallation="true" />
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win8+wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win8+wp8" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="1.5.1.6466-pre2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
