--- a/ITStudySearch/ITStudySearch/ITStudySearch.iOS/ITStudySearch.iOS.csproj
+++ b/ITStudySearch/ITStudySearch/ITStudySearch.iOS/ITStudySearch.iOS.csproj
@@ -13,6 +13,7 @@
     <AssemblyName>ITStudySearchiOS</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <ReleaseVersion>0.0.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
